--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "sass-loader": "^8.0.0",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.1.0",
     "vant": "^2.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
@@ -28,6 +29,8 @@
     "babel-plugin-import": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
