--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vue/eslint-config-standard": "^5.0.1",
+    "axios": "^0.19.2",
     "core-js": "^3.4.3",
     "echarts": "^4.5.0",
     "eslint-plugin-import": "^2.19.1",
